<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gather</string>
    <string name="action_settings">Settings</string>
    <string name="tip">设置手机监听端口</string>
     <string name="tip2">设置远端URL</string>
    <string name="addressText">IP address</string>
    <string name="startBtnTxt">连接远端</string>
    <string name="packageName">com.quvideo.camdy</string>
    <string name="title_activity_wifi">wifi方式</string>
    <string name="title_activity_usb">usb连接方式</string>
    <string name="wifiBtnText">wifi连接方式</string>
    <string name="usbBtnText">usb连接方式</string>
    <string name="portListenTxt">8888</string>
    <string name="listenBtnTxt">开始监听</string>
    
    <string name="portMapText">端口映射</string>
    <string name="pkgNameLb">包名</string>
    <string name="portLb">端口</string>
     <string name="url">URL</string>
</resources>
