<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WifiActivity" >

<TextView
    android:id="@+id/tip2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/pkgNameTxt"
    android:layout_alignParentTop="true"
    android:layout_marginTop="21dp"
    android:text="@string/tip2" />

<TextView
    android:id="@+id/pkgNameTxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/packageName"
    android:layout_alignBottom="@+id/packageName"
    android:layout_alignParentLeft="true"
    android:text="@string/pkgNameLb" />

<TextView
    android:id="@+id/urlLb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/packageName"
    android:layout_toLeftOf="@+id/packageName"
    android:text="@string/url" />


<EditText
    android:id="@+id/packageName"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/addressText"
    android:layout_marginLeft="28dp"
    android:layout_marginTop="30dp"
    android:layout_toRightOf="@+id/pkgNameTxt"
    android:ems="10"
    android:text="@string/packageName" />

<Button
    android:id="@+id/startBtn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/packageName"
    android:layout_marginTop="44dp"
    android:text="@string/startBtnTxt" />

<EditText
    android:id="@+id/addressText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/packageName"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/tip2"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:text="@string/addressText" >

    <requestFocus />
</EditText>


</RelativeLayout>
