<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UsbActivity" >

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip" />

    <Button
        android:id="@+id/listenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="49dp"
        android:text="@string/listenBtnTxt" />

    <TextView
        android:id="@+id/portLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/portListen"
        android:layout_alignBottom="@+id/portListen"
        android:layout_alignParentLeft="true"
        android:text="@string/portLb" />

    <EditText
        android:id="@+id/portListen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listenBtn"
        android:layout_below="@+id/tip"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/portListenTxt" />

    <TextView
        android:id="@+id/pkgNameLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pkgNameTxt"
        android:layout_alignBottom="@+id/pkgNameTxt"
        android:layout_alignParentLeft="true"
        android:text="@string/pkgNameLb" />

    <EditText
        android:id="@+id/pkgNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/portListen"
        android:layout_below="@+id/portListen"
        android:layout_marginTop="28dp"
        android:ems="10" 
        android:text="@string/packageName"
        />

</RelativeLayout>
